name:                VHDL-Sim
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Matthewar/VHDL-Sim#readme
--license:             BSD3
--license-file:        LICENSE
author:              Matt A-R
maintainer:          Matthewar@users.noreply.github.com
copyright:           2017 Matt A-R
category:            Simulation
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lexer.Lexer
                     , Lexer.Alex.Types
                     , Lexer.Alex.Functions
                     , Lexer.Types.Token
                     , Lexer.Types.Monad
                     , Lexer.Types.PositionWrapper
                     , Lexer.Types.Error
                     , Lexer.Functions.Lex
                     , Lexer.Functions.PositionWrapper
                     --, Parser.Parser
                     , Parser.Types.Monad
                     , Parser.Functions.Monad
                     , Parser.Functions.IdentifyToken
                     , Parser.Functions.IdentifyName
                     , Parser.Functions.Parse.DesignFile
                     , Parser.Functions.Parse.Context
                     , Parser.Functions.Parse.Library
                     , Parser.Functions.Convert.Scope
                     , Parser.Netlist.Types.Representation
                     , Parser.Netlist.Types.Stores
                     , Parser.Netlist.Types.Scope
                     , Parser.Netlist.Types.Objects
                     , Parser.Netlist.Types.Operators
                     , Parser.Netlist.Types.Monad
                     , Parser.Netlist.Functions.Stores
                     , Parser.Netlist.Builtin.Netlist
                     , Parser.Netlist.Builtin.Standard
                     --, Parser.Happy.Types
                     --, Parser.Happy.Functions
                     --, Parser.Happy.ParseFunctions
                     --, Netlister.Types.Top
                     , Manager.NewDesignUnit
                     , Manager.Args
                     , Manager.Filing
                     , Manager.Types.Error
                     --, Netlister.ParseTree
                     --, Netlister.Parse.Library
                     --, Netlister.Parse.Package
                     --, Netlister.Parse.Type
                     --, Netlister.Parse.Objects
  build-depends:       base >= 4.7 && < 5
                     , array
                     , split
                     , bytestring
                     , containers
                     , optparse-applicative
                     , transformers
                     , directory
                     , mtl >= 2.2.2
                     , bimap
  build-tools:         alex
                     , happy
  default-language:    Haskell2010

executable VHDL-Sim-exe
  hs-source-dirs:      app
  main-is:             Main.hs
--  other-modules:       
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , VHDL-Sim
                     , array
                     , split
                     , optparse-applicative
  default-language:    Haskell2010

test-suite VHDL-Sim-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       LexerSpec
  build-depends:       base
                     , VHDL-Sim
                     , tasty
                     , tasty-hunit
                     , tasty-quickcheck
                     , containers
                     , split
                     , bytestring
                     , mtl
                     , transformers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Matthewar/FYP
